# stereo_vins

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json
config/: oak_d_lite.yaml
include/: estimator.h  feature.h  featureManager.h  featureTracker.h  preintegrator.h  slideWindow.h  synchronizer.h  utility.h  visual_factor.h
include/tools/: AEController.h  params.h  paramsParser.h  visualizer.h
src/: estimator.cpp  featureManager.cpp  featureTracker.cpp  visual_factor.cpp
test/: test_estimator.cpp  test_featureTracker.cpp  test_paramsParser.cpp  test_synchronizer.cpp
